# gb-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
src/: bus.rs  cartridge.rs  cpu.rs  debugger.rs  disasm.rs  emulator.rs  gameboy.rs  gfx.rs  interconnect.rs  interrupt.rs  joypad.rs  lib.rs  main.rs  timer.rs
src/apu/: frame_sequencer.rs  mod.rs
src/apu/channels/: mod.rs  noise.rs  tone.rs  wave.rs
src/cpu/: mod.rs  register.rs
