[package]
name = "gb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]
description = "A Gameboy emulator"
repository = "https://github.com/abusch/gb-rs"
homepage = "https://github.com/abusch/gb-rs"
keywords = ["emulator", "gameboy"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bitflags = "2.8"
bitvec = "1.0"
byteorder = "1.4"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
log = "0.4"
env_logger = "0.11"
pixels = "0.15.0"
png = "0.17"
ringbuf = "0.4"
rustyline = "15"
winit = "0.29"
winit_input_helper = "0.16"
rubato = "0.16.1"

[profile.release]
debug = true
incremental = true
