[package]
name = "gb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]
description = "A Gameboy emulator"
repository = "https://github.com/abusch/gb-rs"
homepage = "https://github.com/abusch/gb-rs"
keywords = ["emulator", "gameboy"]
readme = "README.md"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bitflags = "2.8"
bitvec = "1.0"
byteorder = "1.4"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.11"
pixels = "0.15.0"
png = "0.17"
ringbuf = "0.4"
rustyline = "15"
winit = "0.30"

[profile.release]
debug = true
incremental = true
