[package]
name = "gb-rs"
version = "0.1.0"
edition = "2024"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]
description = "A Gameboy emulator"
repository = "https://github.com/abusch/gb-rs"
homepage = "https://github.com/abusch/gb-rs"
keywords = ["emulator", "gameboy"]
readme = "README.md"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
bitflags = "2.8"
bitvec = "1.0"
byteorder = "1.4"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.17"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.11"
pixels = "0.17.1"
png = "0.18"
ringbuf = "0.4"
rustyline = "18"
winit = "0.30"

[profile.release]
debug = true
incremental = true
